--- a/esm204_hw3.Rmd
+++ b/esm204_hw3.Rmd
@@ -433,22 +433,14 @@ qeq_6 <- demand_agg_6(peq_6)
 
 **Total electricity consumption is 398978.07 kWh**
 
-Lauren
-```{r}
-
-```
-
-Deanna :)
-```{r}
-
-```
-
-
 (b) What is the total environmental externality?
 ```{r}
 
+env_dmg_6 <- (1.97 * qeq_6)/100
+
 ```
 
+**Total environmental externality is $10,490.66**
 
 (c) What value of the electricity tax makes the total environmental damage the same as the damage when solar panels are available to the high income group?
 ```{r}
