--- a/esm204_hw3.Rmd
+++ b/esm204_hw3.Rmd
@@ -444,6 +444,18 @@ env_dmg_6 <- (1.97 * qeq_6)/100
 
 (c) What value of the electricity tax makes the total environmental damage the same as the damage when solar panels are available to the high income group?
 ```{r}
+#aggregate demand original
+demand_agg <- function(p){
+  q <- demand(p, model_demand_l) + demand(p, model_demand_h)
+  return(q)
+}
 
+#new aggregate demand
+demand_agg_6 <- function(p){
+  q <- demand_halved(p, model_demand_l) + demand_halved(p, model_demand_h)
+  return(q)
+}
+
+diff <- demand_agg(peq_6) - demand_agg_6(peq_6)
 ```
 
