--- a/esm204_hw3.Rmd
+++ b/esm204_hw3.Rmd
@@ -445,15 +445,22 @@ env_dmg_6 <- (1.97 * qeq_6)/100
 (c) What value of the electricity tax makes the total environmental damage the same as the damage when solar panels are available to the high income group?
 ```{r}
 #demand function
-demand <- function(p, model){
-  q <- (p - model$coefficients[[1]])/model$coefficients[[2]]
-  q <- ifelse(q<0,0,q)
-  return(q)
+demand_p <- function(q, model){
+  p <- q*model$coefficients[[2]] + model$coefficients[[1]]
+  p <- ifelse(p<0,0,p)
+  return(p)
 }
 
 #aggregate demand original
-demand_agg <- function(p){
-  q <- demand(p, model_demand_l) + demand(p, model_demand_h)
+demand_agg <- function(q){
+  p <- demand(q, model_demand_l) + demand(q, model_demand_h)
+  return(p)
+}
+
+#demand halved function
+demand_halved <- function(p, model){
+  q <- ((2*p) - model$coefficients[[1]])/model$coefficients[[2]]
+  q <- ifelse(q<0,0,q)
   return(q)
 }
 
