--- a/esm204_hw3.Rmd
+++ b/esm204_hw3.Rmd
@@ -203,8 +203,8 @@ ggplot() +
   geom_line(MPC, mapping = aes(x = demand, y = price, color = "MPC", lty = "MPC")) +
   geom_segment(aes(x = 0, y = 1.97, xend = 819713.75, yend = 1.97, color = "MEC", lty = "MEC")) +
   geom_line(agg_data_new, mapping = aes(x = Qagg_new, y = price, color = "Aggregate (new)", lty = "Aggregate (new)")) +
-  scale_color_manual(name = "Legend", values = cal_palette(name = "kelp1", n = 7, type = "continuous")) +
-  scale_linetype_manual(name = "Legend", values = c("dotdash", "solid", "dashed", "dashed", "solid", "solid", "solid", "solid")) +
+  scale_color_manual(name = "Legend", values = cal_palette(name = "kelp1", n = 8, type = "continuous")) +
+  scale_linetype_manual(name = "Legend", values = c("dotdash", "solid", "dashed", "solid", "dashed", "solid", "solid", "solid")) +
   labs(x = "Quantity (kWh)",
        y = "Price (cents)",
        color = "Demand Curve") + 
