--- a/esm204_hw3.Rmd
+++ b/esm204_hw3.Rmd
@@ -299,6 +299,14 @@ tax_rev51 <- (1.97 * qeq)/100
 
 5. Now, assume that all revenue from the electricity tax will be redistributed to the consumers in proportion to their pre-tax consumption. For example, if 80% of the electricity was consumed by “high” income consumers, then they get 80% of the tax revenue. Additionally, consider the fact that current scientific evidence suggests the true SCC may be much higher than \$51. For a range of SCC values (\$51, \$75, \$100, \$125, and $150 per metric ton of CO2), calculate the effects of an SCC-based electricity tax on:
 
+we need:
+total q (qeq)
+qhigh
+qlow
+- get percentage
+- multiply that by (t* * qeq)
+- add to CS
+
 (a) Overall welfare of “high” income consumers
 (b) Overall welfare of “low” income consumers
 (c) Electricity producers
@@ -347,13 +355,25 @@ for(i in MEC_vec){
 
   peq_new <- uniroot(fm_eq, c(0,750000))$root
   
-  qeq_new <- demand_agg_fl(peq_new)
+  qeq_new <- demand_agg_fl(peq_new) + i
+  
+  qhigh <- demand(10, model_demand_h)
+  
+  qlow <- demand(10, model_demand_l)
+  
+  qhperc <- qhigh/(qhigh + qlow)
+  
+  qlperc <- qlow/(qhigh + qlow)
   
   encost_new <- i * qeq_new
   
-  CSlow_new <- CS_new(peq_new, model_demand_l)/100 - encost_new/100
+  taxrevhigh <- encost_new * qhperc
   
-  CShigh_new <- CS_new(peq_new, model_demand_h)/100
+  taxrevlow <- encost_new * qlperc
+  
+  CSlow_new <- (CS_new(peq_new, model_demand_l)/100) - (encost_new/100) + (taxrevlow/100)
+  
+  CShigh_new <- (CS_new(peq_new, model_demand_h)/100) + (taxrevhigh/100)
   
   PSnew <- PS(qeq_new)/100
   
